WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272250
REGRESSION(
276009@main
) NSRangeException thrown from -[WKUIWindowSceneObserver setObservedWindow:]
https://bugs.webkit.org/show_bug.cgi?id=272250
Summary
REGRESSION(276009@main) NSRangeException thrown from -[WKUIWindowSceneObserve...
Jer Noble
Reported
2024-04-05 15:10:19 PDT
REGRESSION(
276009@main
) NSRangeException thrown from -[WKUIWindowSceneObserver setObservedWindow:]
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-04-05 15:10:21 PDT
<
rdar://problem/125653988
>
Jer Noble
Comment 2
2024-04-05 15:14:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26917
EWS
Comment 3
2024-04-05 19:56:39 PDT
Committed
277145@main
(fff0ad4731a7): <
https://commits.webkit.org/277145@main
> Reviewed commits have been landed. Closing PR #26917 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug