REGRESSION(276009@main) NSRangeException thrown from -[WKUIWindowSceneObserver setObservedWindow:] https://bugs.webkit.org/show_bug.cgi?id=272250 rdar://125653988

Reviewed by Eric Carlson.

Crashlogs say this NSRangeException is thrown when trying to call -removeObserver:withKeyPath: on _window,
with the error message saying the caller is not registered as an observer in the first place.

To be absolutely sure that we aren't accidentally messaging nil when registering ourselves as an observer,
store both the new window and old window in RetainPtrs. There doesn't appear to be a code path by which
we can accidentally un-register twice, but just in case, wrap the call to -removeObserver:withKeyPath: in
a @try/@catch block.

* Source/WebKit/UIProcess/ApplicationStateTracker.mm:
(-[WKUIWindowSceneObserver setObservedWindow:]):

Canonical link: https://commits.webkit.org/277145@main